# EDMCModernOverlay

./: .gitignore  AGENTS.md  Makefile  README.md  RELEASE_NOTES.md  debug.json  dev_settings.json  group_cache.py  harness.py  load.py  overlay_groupings.json  overlay_settings.json  pyproject.toml  version.py  windows_python_install.toml
EDMCOverlay/: edmcoverlay.py
assets/: NOTICE
docs/: CMDR_Troubleshooting.md  FAQ.md  define_plugin_group-API.md  developer.md  rendering-pipeline.md  roadmap.md  testing.md  troubleshooting.md
overlay_client/: client_config.py  control_surface.py  debug_config.py  debug_cycle_overlay.py  developer_helpers.py  follow_controller.py  follow_surface.py  group_coordinator.py  group_transform.py  grouping_helper.py  interaction_controller.py  interaction_surface.py  launcher.py  legacy_processor.py  opacity_utils.py  overlay_client.py  paint_commands.py  payload_builders.py  payload_model.py  payload_transform.py  platform_context.py  platform_integration.py  plugin_group_clear.py  plugin_group_filter.py  plugin_overrides.py  render_surface.py  setup_surface.py  transform_helpers.py  vector_renderer.py  visibility_helper.py  window_controller.py  window_integration.py  window_tracking.py  window_tracking_support.py  window_utils.py  windows_icon.py
overlay_controller/: input_bindings.py  keybindings.json  overlay_controller.py  profile_ui.py
overlay_plugin/: command_overlay_groups.py  controller_services.py  group_status_enrichment.py  groupings_diff.py  groupings_loader.py  hotkeys.py  journal_commands.py  known_plugins.json  (+21 more)
(+287 files in other folders)
