[project]
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
extend-ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
show_error_codes = true
explicit_package_bases = true
disable_error_code = "arg-type,attr-defined,call-arg,operator,no-redef,var-annotated,union-attr"
files = "overlay_plugin, overlay_controller, load.py, group_cache.py, prefix_entries.py"

[[tool.mypy.overrides]]
module = "overlay_controller.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "overlay_controller.input_bindings"
ignore_errors = true

[tool.pytest.ini_options]
markers = [
    "pyqt_required: marks tests that require PyQt and PYQT_TESTS=1",
]

[tool.windows_python_install]
version = "0.0.0"
arch = "amd64"
url = "REPLACED_AT_BUILD"
sha256 = "REPLACED_AT_BUILD"
target_dir_template = "%LOCALAPPDATA%\\Programs\\Python\\Python{MAJOR}{MINOR}"
python_exe_template = "%LOCALAPPDATA%\\Programs\\Python\\Python{MAJOR}{MINOR}\\python.exe"
